--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         <img src="img/meeting-1453895_1280.png" alt="project">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusamus reiciendis minima libero animi. </br>
-                            <a class="project-link" target="_blank" href="#"> Przejdż do projektu </a>
+                        <p class="about-project-text">Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5, CSS3, JavaScript, JQuery oraz Lightbox. </br>
+                            <a class="project-link" target="_blank" href="img/studio-tatuazumin.PNG"> Przejdż do projektu </a>
                         </p>
                     </div>
                 </div>
