add new project

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <div class="project">
                 <div class="web">
                     <div class="project-img">
-                        <img src="img/meeting-1453895_1280.png" alt="project">
+                        <img src="img/studio-tatuazumin.PNG" alt="Strona studia tatuażu">
                     </div>
                     <div class="about-project">
                         <p class="about-project-text">Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5, CSS3, JavaScript, JQuery oraz Lightbox. </br>
-                            <a class="project-link" target="_blank" href="img/studio-tatuazumin.PNG"> Przejdż do projektu </a>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/studio-tatuazu/"> Przejdż do projektu </a>
                         </p>
                     </div>
                 </div>
