change in socials links

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <a class="social-link" target="_blank" href="https://github.com/AdamSwiderski"> <i class="fab fa-github-square"></i></a>
                 </div>
                 <div class="social">
-                    <a class="social-link" target="_blank" href="https://www.linkedin.com/in/adam-%C5%9Bwiderski/"> <i class="fab fa-linkedin"></i></a>
+                    <a class="social-link" target="_blank" href="https://www.linkedin.com/in/adam-swiderski/"> <i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
