add new project

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             <div class="project">
                 <div class="web">
                     <div class="project-img">
-                        <img src="img/meeting-1453895_1280.png" alt="project">
+                        <img src="img/mailing.PNG" alt="Mailing">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam explicabo quis molestias magni pariatur necessitatibus a iusto. </br>
-                            <a class="project-link" target="_blank" href="#"> Przejdż do projektu</a>
+                        <p class="about-project-text"> Mailing studia The Smile Skull Ink. - reklama, która dociera do odbiorców poprzez e-mail.</br>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/mailing/"> Przejdż do projektu</a>
                         </p>
                     </div>
                 </div>
