add github links to projects

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                         <img src="img/gra_papier_kamien_nozyce.png" alt="Gra papier, kamień, nożyce">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text">Prosta gra papier, kamień, nożyce stworzona przy pomocy HTML, CSS oraz JavaScript. </br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/Gra-papier-kamien-nozyce/"> Przejdż do projektu </a>
+                        <p class="about-project-text"> Prosta gra papier, kamień, nożyce stworzona przy pomocy HTML, CSS oraz JavaScript. </br>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/Gra-papier-kamien-nozyce/"> Przejdż do projektu </a> </br>
+                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -93,8 +94,9 @@
                         <img src="img/studio-tatuazumin.PNG" alt="Strona studia tatuażu">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text">Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5, CSS3, JavaScript, JQuery oraz Lightbox. </br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/studio-tatuazu/"> Przejdż do projektu </a>
+                        <p class="about-project-text"> Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5, CSS3, JavaScript, JQuery oraz Lightbox. </br>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/studio-tatuazu/"> Przejdż do projektu </a> </br>
+                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -106,7 +108,8 @@
                     </div>
                     <div class="about-project">
                         <p class="about-project-text"> Mailing studia The Smile Skull Ink. - reklama, która dociera do odbiorców poprzez e-mail.</br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/mailing/"> Przejdż do projektu </a>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/mailing/"> Przejdż do projektu </a>  </br>
+                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
