add new project

--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
                     </div>
                 </div>
             </div>
+            <div class="project">
+                <div class="web">
+                    <div class="project-img">
+                        <img src="img/serwis-samochodowy.PNG" alt="serwis samochodowy">
+                    </div>
+                    <div class="about-project">
+                        <p class="about-project-text"> Strona wizytówka serwisu samochodowego. Napisany za pomocą HTML5, JavaScript oraz CSS3 wraz z preprocesorem SASS. </br>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/serwis-samochodowy/"> Przejdż do projektu </a> </br>
+                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/serwis-samochodowy"> Przejdź na GitHub</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="socials" class="socials">
