--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="style.css" rel="stylesheet">
     <title>Portfolio - Adam Świderski</title>
@@ -37,30 +37,51 @@
 
         <div class="welcome">
             <div class="wrapper">
-                <p class="welcome-start">Witaj</p>
-                <h1 class="welcome-title">nazywam się Adam Świderski</h1>
-                <h2 class="welcome-sub-title">Chciałbym zostać profesjonalnym Front-Endowcem</h2>
+                <p class="welcome-start"></p>
+                <h1 class="welcome-title"></h1>
+                <h2 class="welcome-sub-title"></h2>
             </div>
         </div>
     </header>
     <section id="about-me" class="about-me">
         <div class="wrapper">
-            <p class="about-me-start">Nazywam się Adam Świderski, przygodę z programowaniem zacząłem od kursów internetowych. Ukończyłem technikum o profilu informatycznym oraz Politechnikę Białostocką na kierunku Zarządzanie i Inżynieria Produkcji. W przyszłości chciałbym rozwijać swoje umiejętności programowania Front-end.</p>
+            <p class="about-me-start">Nazywam się Adam Świderski, przygodę z programowaniem zacząłem pod koniec 2018 roku od kursów
+                internetowych na platformie udemy. Po ukończeniu kursów stworzyłem pierwszą stronę - portfolio oraz zacząłem pisać projekty, które umieściłem poniżej. Ukończyłem technikum o profilu informatycznym oraz Politechnikę Białostocką na kierunku
+                Zarządzanie i Inżynieria Produkcji. W przyszłości chciałbym rozwijać swoje umiejętności programowania z zakresu 
+                Front-end.</p>
             <div class="languages">
                 <h2 class="languages-title">Na co dzień używam:</h2>
                 <div class="icons">
                     <div class="container-icon">
-                        <img class="icon" src="img/html_icon_big.png" alt="Ikona HTML">
+                        <img class="icon" src="img/vsc-icon.png" alt="Ikona JavaScript">
                     </div>
                     <div class="container-icon">
-                        <img class="icon" src="img/css_icon_big.png" alt="Ikona CSS">
+                        <img class="icon" src="img/github-icon.png" alt="Ikona JavaScript">
                     </div>
                     <div class="container-icon">
-                        <img class="icon" src="img/js_icon_big.png" alt="Ikona JavaScript">
+                        <img class="icon" src="img/html-icon.png" alt="Ikona HTML">
+                    </div>
+                    <div class="container-icon">
+                        <img class="icon" src="img/css-icon.png" alt="Ikona CSS">
+                    </div>
+                    <div class="container-icon">
+                        <img class="icon" src="img/js-icon.png" alt="Ikona JavaScript">
+                    </div>
+                    <div class="container-icon">
+                        <img class="icon" src="img/sass-icon.png" alt="Ikona SASS">
                     </div>
                 </div>
             </div>
             <p class="about-me-end">Dbam także o to by każda strona była responsywna.</p>
+            <p class="about-me-end">W przyszłości chcę poznać: </p>
+            <div class="icons">
+                    <div class="container-icon">
+                        <img class="icon" src="img/react-icon.png" alt="Ikona React">
+                    </div>
+                    <div class="container-icon">
+                        <img class="icon" src="img/angular-icon.png" alt="Ikona Angular">
+                    </div>
+                </div>
         </div>
         <div class="hobbies">
             <div class="wrapper">
@@ -81,9 +102,13 @@
                         <img src="img/gra_papier_kamien_nozyce.png" alt="Gra papier, kamień, nożyce">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text"> Prosta gra papier, kamień, nożyce stworzona przy pomocy HTML, CSS oraz JavaScript. </br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/Gra-papier-kamien-nozyce/"> Przejdż do projektu </a> </br>
-                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
+                        <p class="about-project-text"> Prosta gra papier, kamień, nożyce stworzona przy pomocy HTML, CSS
+                            oraz JavaScript. </br>
+                            <a class="project-link" target="_blank"
+                                href="https://adamswiderski.github.io/Gra-papier-kamien-nozyce/"> Przejdż do projektu
+                            </a> </br>
+                            <a class="project-link" target="_blank"
+                                href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -94,9 +119,12 @@
                         <img src="img/studio-tatuazumin.PNG" alt="Strona studia tatuażu">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text"> Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5, CSS3, JavaScript, JQuery oraz Lightbox. </br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/studio-tatuazu/"> Przejdż do projektu </a> </br>
-                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
+                        <p class="about-project-text"> Strona wizytówka studia tatuażu. Napisana przy pomocy HTML5,
+                            CSS3, JavaScript, JQuery oraz Lightbox. </br>
+                            <a class="project-link" target="_blank"
+                                href="https://adamswiderski.github.io/studio-tatuazu/"> Przejdż do projektu </a> </br>
+                            <a class="project-link" target="_blank"
+                                href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -107,9 +135,12 @@
                         <img src="img/mailing.PNG" alt="Mailing">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text"> Mailing studia The Smile Skull Ink. - reklama, która dociera do odbiorców poprzez e-mail.</br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/mailing/"> Przejdż do projektu </a>  </br>
-                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
+                        <p class="about-project-text"> Mailing studia The Smile Skull Ink. - reklama, która dociera do
+                            odbiorców poprzez e-mail.</br>
+                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/mailing/">
+                                Przejdż do projektu </a> </br>
+                            <a class="project-link" target="_blank"
+                                href="https://github.com/AdamSwiderski/Gra-papier-kamien-nozyce"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -120,9 +151,13 @@
                         <img src="img/serwis-samochodowy.PNG" alt="serwis samochodowy">
                     </div>
                     <div class="about-project">
-                        <p class="about-project-text"> Strona wizytówka serwisu samochodowego. Napisany za pomocą HTML5, JavaScript oraz CSS3 wraz z preprocesorem SASS. </br>
-                            <a class="project-link" target="_blank" href="https://adamswiderski.github.io/serwis-samochodowy/"> Przejdż do projektu </a> </br>
-                            <a class="project-link" target="_blank" href="https://github.com/AdamSwiderski/serwis-samochodowy"> Przejdź na GitHub</a>
+                        <p class="about-project-text"> Strona wizytówka serwisu samochodowego. Napisany za pomocą HTML5,
+                            JavaScript oraz CSS3 wraz z preprocesorem SASS. </br>
+                            <a class="project-link" target="_blank"
+                                href="https://adamswiderski.github.io/serwis-samochodowy/"> Przejdż do projektu </a>
+                            </br>
+                            <a class="project-link" target="_blank"
+                                href="https://github.com/AdamSwiderski/serwis-samochodowy"> Przejdź na GitHub</a>
                         </p>
                     </div>
                 </div>
@@ -134,13 +169,16 @@
             <h2 class="socials-title">Znajdziesz mnie na:</h2>
             <div class="social-container">
                 <div class="social">
-                    <a class="social-link" target="_blank" href="https://www.facebook.com/adam.swiderski.7"> <i class="fab fa-facebook-square"></i></a>
+                    <a class="social-link" target="_blank" href="https://www.facebook.com/adam.swiderski.7"> <i
+                            class="fab fa-facebook-square"></i></a>
                 </div>
                 <div class="social">
-                    <a class="social-link" target="_blank" href="https://github.com/AdamSwiderski"> <i class="fab fa-github-square"></i></a>
+                    <a class="social-link" target="_blank" href="https://github.com/AdamSwiderski"> <i
+                            class="fab fa-github-square"></i></a>
                 </div>
                 <div class="social">
-                    <a class="social-link" target="_blank" href="https://www.linkedin.com/in/adam-swiderski/"> <i class="fab fa-linkedin"></i></a>
+                    <a class="social-link" target="_blank" href="https://www.linkedin.com/in/adam-swiderski/"> <i
+                            class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
@@ -148,6 +186,8 @@
     <footer class="foot">
         <div class="wrapper">
             <p class="foot-text"> &copy; Adam Świderski </p>
+            <a class="icon-designed" href="https://www.iconfinder.com/Sennerstad">Icons designed by Erik Ragnar
+                Eliasson</a>
         </div>
     </footer>
     <script src="main.js"></script>
